@@ -4,25 +4,29 @@ import com.google.common.util.concurrent.MoreExecutors;
 import greencity.ModelUtils;
 import greencity.client.UserRemoteClient;
 import greencity.config.InternalUrlConfigProp;
+import greencity.constant.AppConstant;
 import greencity.constant.ErrorMessage;
+import greencity.constant.TelegramBotConstants;
 import greencity.dto.notification.NotificationDto;
 import greencity.dto.notification.NotificationFullDto;
 import greencity.dto.notification.NotificationShortDto;
+import greencity.dto.notification.ScheduledEmailMessage;
 import greencity.dto.order.PaymentSystemResponse;
 import greencity.dto.pageble.PageableAdvancedDto;
+import greencity.entity.order.Bag;
+import greencity.entity.notifications.NotificationParameter;
+import greencity.entity.notifications.UserNotification;
 import greencity.entity.order.Event;
+import greencity.entity.order.Order;
+import greencity.entity.order.Payment;
+import greencity.entity.user.User;
+import greencity.entity.user.Violation;
+import greencity.enums.NotificationReceiverType;
 import greencity.enums.NotificationTrigger;
 import greencity.enums.NotificationType;
 import greencity.enums.OrderPaymentStatus;
 import greencity.enums.OrderStatus;
 import greencity.enums.PaymentStatus;
-import greencity.enums.NotificationReceiverType;
-import greencity.entity.notifications.NotificationParameter;
-import greencity.entity.notifications.UserNotification;
-import greencity.entity.order.Order;
-import greencity.entity.order.Payment;
-import greencity.entity.user.User;
-import greencity.entity.user.Violation;
 import greencity.enums.UserCategory;
 import greencity.exceptions.NotFoundException;
 import greencity.exceptions.http.AccessDeniedException;
@@ -34,7 +38,11 @@ import greencity.repository.UserNotificationRepository;
 import greencity.repository.UserRepository;
 import greencity.repository.ViolationRepository;
 import greencity.service.ubs.OrderBagService;
+import java.util.Map;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.Future;
 import java.util.stream.Stream;
+import greencity.ubstelegrambot.messages.MessageProvider;
 import lombok.SneakyThrows;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
@@ -43,7 +51,6 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
-
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
@@ -52,7 +59,6 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
-
 import java.time.Clock;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
@@ -68,15 +74,23 @@ import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.ExecutorService;
-
+import static greencity.constant.OrderHistory.ADD_VIOLATION_UK;
+import static greencity.constant.OrderHistory.CHANGES_VIOLATION_UK;
+import static greencity.constant.OrderHistory.DELETE_VIOLATION_UK;
+import static greencity.constant.OrderHistory.ORDER_ADJUSTMENT_UK;
+import static greencity.constant.OrderHistory.ORDER_CONFIRMED_UK;
+import static greencity.constant.OrderHistory.ORDER_FORMED_UK;
+import static greencity.constant.OrderHistory.ORDER_NOT_TAKEN_OUT_UK;
+import static greencity.constant.OrderHistory.ORDER_ON_THE_ROUTE_UK;
 import static greencity.ModelUtils.TEST_NOTIFICATION_FULL_DTO_PAGEABLE;
+import static greencity.ModelUtils.TEST_NOTIFICATION_FULL_DTO_PAGEABLE_2;
 import static greencity.ModelUtils.TEST_UUID;
 import static greencity.ModelUtils.TEST_PAGEABLE_ADVANCED_DTO;
 import static greencity.ModelUtils.TEST_NOTIFICATION_DTO;
 import static greencity.ModelUtils.TEST_NOTIFICATION_PARAMETER_SET;
 import static greencity.ModelUtils.TEST_NOTIFICATION_PARAMETER_SET2;
 import static greencity.ModelUtils.TEST_NOTIFICATION_TEMPLATE;
-import static greencity.ModelUtils.TEST_ORDER_2;
+import static greencity.ModelUtils.TEST_NOTIFICATION_TEMPLATE_2;
 import static greencity.ModelUtils.TEST_ORDER_3;
 import static greencity.ModelUtils.TEST_ORDER_4;
 import static greencity.ModelUtils.TEST_ORDER_5;
@@ -101,29 +115,25 @@ import static greencity.ModelUtils.getActiveCertificateWith10Points;
 import static greencity.ModelUtils.getUser;
 import static greencity.ModelUtils.getViolation;
 import static greencity.enums.NotificationReceiverType.SITE;
+import static java.util.Arrays.asList;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.anyLong;
+import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.when;
-import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.anyLong;
-import static greencity.constant.OrderHistory.ADD_VIOLATION_UK;
-import static greencity.constant.OrderHistory.CHANGES_VIOLATION_UK;
-import static greencity.constant.OrderHistory.DELETE_VIOLATION_UK;
-import static greencity.constant.OrderHistory.ORDER_ADJUSTMENT_UK;
-import static greencity.constant.OrderHistory.ORDER_CONFIRMED_UK;
-import static greencity.constant.OrderHistory.ORDER_FORMED_UK;
-import static greencity.constant.OrderHistory.ORDER_NOT_TAKEN_OUT_UK;
-import static greencity.constant.OrderHistory.ORDER_ON_THE_ROUTE_UK;
-import static java.util.Arrays.asList;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class NotificationServiceImplTest {
@@ -138,6 +148,8 @@ class NotificationServiceImplTest {
     private static final String PHONE_NUMBER_KEY = "phoneNumber";
     private static final String CUSTOMER = "customerName";
     private static final String PAYMENT_LINK = "https://pay.monobank.ua/2412255Qb57omFE7dAjC";
+    private static final String USERNAME = "John Smith";
+    private static final String USER_EMAIL = "test@some.com";
 
     @Mock
     private OrderRepository orderRepository;
@@ -185,15 +197,15 @@ class NotificationServiceImplTest {
     @Mock
     private OrderBagService orderBagService;
 
+    @BeforeEach
+    void setUp() {
+        fixedClock = Clock.fixed(LOCAL_DATE_TIME.toInstant(ZoneOffset.ofHours(0)), ZoneId.systemDefault());
+        lenient().doReturn(fixedClock.instant()).when(clock).instant();
+        lenient().doReturn(fixedClock.getZone()).when(clock).getZone();
+    }
+
     @Nested
     class ClockNotification {
-        @BeforeEach
-        public void setUp() {
-            fixedClock = Clock.fixed(LOCAL_DATE_TIME.toInstant(ZoneOffset.ofHours(0)), ZoneId.systemDefault());
-            lenient().doReturn(fixedClock.instant()).when(clock).instant();
-            lenient().doReturn(fixedClock.getZone()).when(clock).getZone();
-        }
-
         @Test
         void testNotifyUnpaidOrders() {
             List<Order> orders = List.of(
@@ -243,7 +255,7 @@ class NotificationServiceImplTest {
             created.setNotificationTime(LocalDateTime.now(fixedClock));
             created.setUser(getUser());
             created.setId(1L);
-            created.setOrder(orders.get(0));
+            created.setOrder(orders.getFirst());
 
             when(userNotificationRepository.save(any())).thenReturn(created);
 
@@ -272,18 +284,61 @@ class NotificationServiceImplTest {
         }
 
         @Test
-        void testNotifyPaidOrder() {
-            when(userNotificationRepository.save(any())).thenReturn(TEST_USER_NOTIFICATION);
+        void testNotifyUnpaidOrdersWhenOrderDoesNotNeedNewNotification() {
+            Order order = Order.builder()
+                .id(1L)
+                .user(getUser())
+                .orderPaymentStatus(OrderPaymentStatus.UNPAID)
+                .orderDate(LocalDateTime.now(fixedClock).minusDays(2))
+                .build();
 
-            notificationService.notifyPaidOrder(TEST_ORDER_2);
+            when(orderRepository
+                .findAllByOrderStatusNotAndOrderPaymentStatus(OrderStatus.CANCELED, OrderPaymentStatus.UNPAID))
+                .thenReturn(List.of(order));
+            when(userNotificationRepository.findFirstByOrderIdAndNotificationTypeInOrderByNotificationTimeDesc(
+                order.getId(), NotificationType.UNPAID_ORDER))
+                .thenReturn(Optional.of(new UserNotification()));
 
-            verify(userNotificationRepository, times(1)).save(any());
+            notificationService.notifyUnpaidOrders();
 
+            verify(userNotificationRepository, never()).save(any());
+            verify(notificationParameterRepository, never()).saveAll(any());
+        }
+
+        @Test
+        void testNotifyUnpaidOrdersWhenPaymentLinkNotPresent() {
+            Map<Integer, Integer> amountOfBagsOrdered = new HashMap<>();
+            amountOfBagsOrdered.put(1, 2);
+            Order order = Order.builder()
+                .id(1L)
+                .user(getUser())
+                .orderPaymentStatus(OrderPaymentStatus.UNPAID)
+                .orderDate(LocalDateTime.now(fixedClock).minusDays(4))
+                .amountOfBagsOrdered(amountOfBagsOrdered)
+                .build();
+            Bag bag = Bag.builder()
+                .id(1)
+                .fullPrice(100L)
+                .build();
+
+            when(orderRepository.findAllByOrderStatusNotAndOrderPaymentStatus(
+                OrderStatus.CANCELED, OrderPaymentStatus.UNPAID))
+                .thenReturn(Collections.singletonList(order));
+            when(userNotificationRepository.findUserNotificationByOrderAndNotificationType(
+                order, NotificationType.UNPAID_ORDER))
+                .thenReturn(Optional.empty());
+            when(orderBagService.findAllBagsByOrderId(1L)).thenReturn(Collections.singletonList(bag));
+
+            notificationService.notifyUnpaidOrders();
+
+            verify(userNotificationRepository, never()).save(any());
+            verify(userNotificationRepository).findUserNotificationByOrderAndNotificationType(
+                order, NotificationType.UNPAID_ORDER);
         }
 
         @Test
         @SneakyThrows
-        void notifyPaidOrder() {
+        void testNotifyPaidOrder() {
             Order order = Order.builder().id(1L).build();
             NotificationParameter orderNumber = NotificationParameter.builder()
                 .key("orderNumber")
@@ -300,22 +355,36 @@ class NotificationServiceImplTest {
         }
 
         @Test
-        void notifyUnpaidOrderPermanentlyTest() {
-            Double amountToPay = 10000.0;
+        void testNotifyUnpaidOrderPermanently() {
+            long amountToPay = 10000L;
 
             when(mockOrder.getOrderPaymentStatus()).thenReturn(OrderPaymentStatus.UNPAID);
             when(mockUserNotification.getOrder()).thenReturn(mockOrder);
             when(userNotificationRepository.save(any(UserNotification.class))).thenReturn(mockUserNotification);
-            when(notificationParameterRepository.saveAll(any())).thenAnswer(invocation -> {
-                return new ArrayList<>(invocation.getArgument(0));
-            });
+            when(notificationParameterRepository.saveAll(any())).thenAnswer(
+                invocation -> new ArrayList<>(invocation.getArgument(0)));
 
             assertDoesNotThrow(() -> notificationService.notifyUnpaidOrderPermanently(mockUserNotification.getOrder(),
-                amountToPay.longValue(), PaymentSystemResponse.builder()
+                amountToPay, PaymentSystemResponse.builder()
                     .orderId(1L).link(PAYMENT_LINK).build()));
 
             verify(userNotificationRepository).save(any(UserNotification.class));
             verify(notificationParameterRepository).saveAll(any());
+        }
+
+        @Test
+        void testNotifyUnpaidOrderPermanentlyWhenOrderIsPaid() {
+            long amountToPay = 10000L;
+            Order order = Order.builder()
+                .id(1L)
+                .orderPaymentStatus(OrderPaymentStatus.PAID)
+                .build();
+
+            notificationService.notifyUnpaidOrderPermanently(order, amountToPay,
+                PaymentSystemResponse.builder().link(PAYMENT_LINK).build());
+
+            verify(userNotificationRepository, never()).save(any());
+            verify(notificationParameterRepository, never()).saveAll(any());
         }
 
         @Test
@@ -401,6 +470,16 @@ class NotificationServiceImplTest {
         }
 
         @Test
+        void testNotifyBonusesWhenOverpaymentZero() {
+            Order order = Order.builder().id(1L).build();
+
+            notificationService.notifyBonuses(order, 0L);
+
+            verify(userNotificationRepository, never()).save(any());
+            verify(notificationParameterRepository, never()).saveAll(any());
+        }
+
+        @Test
         void testNotifyBonusesFromCanceledOrder() {
             when(userNotificationRepository.save(TEST_USER_NOTIFICATION_5)).thenReturn(TEST_USER_NOTIFICATION_5);
 
@@ -415,6 +494,19 @@ class NotificationServiceImplTest {
             verify(userNotificationRepository).save(any());
             verify(notificationParameterRepository).saveAll(TEST_NOTIFICATION_PARAMETER_SET2);
 
+        }
+
+        @Test
+        void testNotifyBonusesFromCanceledOrderWhenPointsToReturnZero() {
+            Order order = Order.builder()
+                .id(1L)
+                .pointsToUse(0)
+                .build();
+
+            notificationService.notifyBonusesFromCanceledOrder(order);
+
+            verify(userNotificationRepository, never()).save(any());
+            verify(notificationParameterRepository, never()).saveAll(any());
         }
 
         @Test
@@ -442,7 +534,7 @@ class NotificationServiceImplTest {
         }
 
         @Test
-        void TestNotifyChangedViolation() {
+        void testNotifyChangedViolation() {
             Set<NotificationParameter> parameters = new HashSet<>();
             parameters.add(NotificationParameter.builder()
                 .key("orderNumber")
@@ -460,7 +552,7 @@ class NotificationServiceImplTest {
         }
 
         @Test
-        void TestNotifyDeleteViolation() {
+        void testNotifyDeleteViolation() {
             Set<NotificationParameter> parameters = new HashSet<>();
             parameters.add(NotificationParameter.builder()
                 .key("orderNumber")
@@ -791,7 +883,7 @@ class NotificationServiceImplTest {
             return parameters;
         }
 
-        private void mockUserNeedNotificationCheck(Order order,NotificationType notificationType){
+        private void mockUserNeedNotificationCheck(Order order, NotificationType notificationType) {
             when(userNotificationRepository
                 .findFirstByOrderIdAndNotificationTypeInOrderByNotificationTimeDesc(order.getId(),
                     notificationType)).thenReturn(Optional.empty());
@@ -870,6 +962,18 @@ class NotificationServiceImplTest {
             notificationService1.notifyInactiveAccounts();
 
             verify(userNotificationRepository, times(2)).save(any());
+        }
+
+        @Test
+        void testNotifyInactiveAccountsWhenExecutionException() throws Exception {
+            when(executorService.invokeAll(any())).thenReturn(List.of(mock(Future.class)));
+            when(executorService.invokeAll(any()).get(0).get())
+                .thenThrow(new ExecutionException("Test exception", null));
+
+            assertDoesNotThrow(() -> notificationService.notifyInactiveAccounts());
+
+            verify(executorService, times(2)).invokeAll(any());
+            verify(userNotificationRepository, never()).save(any());
         }
 
         @Test
@@ -958,7 +1062,7 @@ class NotificationServiceImplTest {
             parameters.add(NotificationParameter.builder().key("amountToPay")
                 .value(String.format("%.2f", (double) amountToPay)).build());
             parameters.add(NotificationParameter.builder().key("orderNumber")
-                .value(orders.get(0).getId().toString()).build());
+                .value(orders.getFirst().getId().toString()).build());
 
             when(orderBagService.findAllBagsByOrderId(any())).thenReturn(getBag1list());
             when(userNotificationRepository.save(any())).thenReturn(notification);
@@ -985,7 +1089,7 @@ class NotificationServiceImplTest {
             SITE)).thenReturn(Optional.of(TEST_NOTIFICATION_TEMPLATE));
 
         PageableAdvancedDto<NotificationShortDto> actual = notificationService
-            .getAllShortNotificationsForUser(email, "ua", TEST_PAGEABLE);
+            .getAllShortNotificationsForUser(email, "uk", TEST_PAGEABLE);
 
         assertEquals(TEST_PAGEABLE_ADVANCED_DTO, actual);
     }
@@ -993,7 +1097,7 @@ class NotificationServiceImplTest {
     @Test
     void testGetAllNotificationsForUser() {
         String userUuid = "user uuid";
-        String language = "ua";
+        String language = "uk";
         Long orderId = 5L;
         Long notificationId = 0L;
         NotificationType notificationType = NotificationType.VIOLATION_THE_RULES;
@@ -1048,7 +1152,7 @@ class NotificationServiceImplTest {
     void testGetAllNotificationForUserWhenNotificationDoesNotBelongToUser() {
         String userUuid = "user uuid";
         String anotherUserUuid = "another uuid";
-        String language = "ua";
+        String language = "uk";
         Long notificationId = 0L;
         NotificationType notificationType = NotificationType.VIOLATION_THE_RULES;
         UserNotification userNotification = Mockito.mock(UserNotification.class);
@@ -1086,7 +1190,7 @@ class NotificationServiceImplTest {
     @Test
     void testGetAllNotificationForUserWhenNotificationIsNotFound() {
         String userUuid = "user uuid";
-        String language = "ua";
+        String language = "uk";
         Long notificationId = 1L;
         UserNotification userNotification = Mockito.mock(UserNotification.class);
         NotificationType notificationType = NotificationType.UNPAID_ORDER;
@@ -1120,8 +1224,8 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void getUnreadenNotificationsTest() {
-        assertEquals(0, notificationService.getUnreadenNotifications("Test"));
+    void testGetUnreadNotifications() {
+        assertEquals(0, notificationService.getUnreadNotifications("Test"));
     }
 
     @Test
@@ -1131,7 +1235,7 @@ class NotificationServiceImplTest {
             NotificationType.UNPAID_ORDER,
             SITE)).thenReturn(Optional.of(TEST_NOTIFICATION_TEMPLATE));
 
-        NotificationDto actual = notificationService.getNotification("test", 1L, "ua");
+        NotificationDto actual = notificationService.getNotification("test", 1L, "uk");
 
         assertEquals(TEST_NOTIFICATION_DTO, actual);
     }
@@ -1141,7 +1245,7 @@ class NotificationServiceImplTest {
         when(userNotificationRepository.findById(1L)).thenReturn(Optional.of(TEST_USER_NOTIFICATION_4));
 
         assertThrows(AccessDeniedException.class,
-            () -> notificationService.getNotification("testtest", 1L, "ua"));
+            () -> notificationService.getNotification("testtest", 1L, "uk"));
     }
 
     @Test
@@ -1155,13 +1259,92 @@ class NotificationServiceImplTest {
         when(violationRepository.findByOrderIdAndDescription(notification.getOrder().getId(), "Description"))
             .thenReturn(Optional.of(getViolation()));
 
-        NotificationDto actual = notificationService.getNotification("abc", 1L, "ua");
+        NotificationDto actual = notificationService.getNotification("abc", 1L, "uk");
 
         assertEquals(createViolationNotificationDto(), actual);
     }
 
     @Test
-    void getNotificationViolationNotFoundException() {
+    void testGetNotificationMarksAsReadWhenMarkAsReadTrue() {
+        UserNotification notification = createUserNotificationForViolationWithParameters();
+        notification.getUser().setUuid("abc");
+        notification.setRead(false);
+
+        when(userNotificationRepository.findById(1L)).thenReturn(Optional.of(notification));
+        when(templateRepository.findNotificationTemplateByNotificationTypeAndNotificationReceiverType(
+            NotificationType.VIOLATION_THE_RULES, SITE)).thenReturn(Optional.of(TEST_NOTIFICATION_TEMPLATE));
+        when(violationRepository.findByOrderIdAndDescription(notification.getOrder().getId(), "Description"))
+            .thenReturn(Optional.of(getViolation()));
+        when(userNotificationRepository.save(notification)).thenReturn(notification);
+
+        NotificationDto actual = notificationService.getNotification("abc", 1L, "uk", true);
+
+        assertEquals(createViolationNotificationDto(), actual);
+        assertTrue(notification.isRead(), "Notification should be marked as read");
+        verify(userNotificationRepository).save(notification);
+    }
+
+    @Test
+    void testGetNotificationDoesNotMarkAsReadWhenMarkAsReadFalse() {
+        UserNotification notification = createUserNotificationForViolationWithParameters();
+        notification.getUser().setUuid("abc");
+        notification.setRead(false);
+
+        when(userNotificationRepository.findById(1L)).thenReturn(Optional.of(notification));
+        when(templateRepository.findNotificationTemplateByNotificationTypeAndNotificationReceiverType(
+            NotificationType.VIOLATION_THE_RULES, SITE)).thenReturn(Optional.of(TEST_NOTIFICATION_TEMPLATE));
+        when(violationRepository.findByOrderIdAndDescription(notification.getOrder().getId(), "Description"))
+            .thenReturn(Optional.of(getViolation()));
+
+        NotificationDto actual = notificationService.getNotification("abc", 1L, "uk", false);
+
+        assertEquals(createViolationNotificationDto(), actual);
+        assertFalse(notification.isRead(), "Notification should not be marked as read");
+        verify(userNotificationRepository, never()).save(any());
+    }
+
+    @Test
+    void testGetNotificationMarksAsReadThroughEndpoint() {
+        UserNotification notification = createUserNotificationForViolationWithParameters();
+        notification.getUser().setUuid("abc");
+        notification.setRead(false);
+
+        when(userNotificationRepository.findById(1L)).thenReturn(Optional.of(notification));
+        when(templateRepository.findNotificationTemplateByNotificationTypeAndNotificationReceiverType(
+            NotificationType.VIOLATION_THE_RULES, SITE)).thenReturn(Optional.of(TEST_NOTIFICATION_TEMPLATE));
+        when(violationRepository.findByOrderIdAndDescription(notification.getOrder().getId(), "Description"))
+            .thenReturn(Optional.of(getViolation()));
+        when(userNotificationRepository.save(notification)).thenReturn(notification);
+
+        NotificationDto actual = notificationService.getNotification("abc", 1L, "uk");
+
+        assertEquals(createViolationNotificationDto(), actual);
+        assertTrue(notification.isRead(),
+            "Notification should be marked as read when accessed through /notifications/{id}");
+        verify(userNotificationRepository).save(notification);
+    }
+
+    @Test
+    void testGetNotificationDoesNotSaveWhenAlreadyReadAndMarkAsReadTrue() {
+        UserNotification notification = createUserNotificationForViolationWithParameters();
+        notification.getUser().setUuid("abc");
+        notification.setRead(true);
+
+        when(userNotificationRepository.findById(1L)).thenReturn(Optional.of(notification));
+        when(templateRepository.findNotificationTemplateByNotificationTypeAndNotificationReceiverType(
+            NotificationType.VIOLATION_THE_RULES, SITE)).thenReturn(Optional.of(TEST_NOTIFICATION_TEMPLATE));
+        when(violationRepository.findByOrderIdAndDescription(notification.getOrder().getId(), "Description"))
+            .thenReturn(Optional.of(getViolation()));
+
+        NotificationDto actual = notificationService.getNotification("abc", 1L, "uk", true);
+
+        assertEquals(createViolationNotificationDto(), actual);
+        assertTrue(notification.isRead(), "Notification should remain read");
+        verify(userNotificationRepository, never()).save(any());
+    }
+
+    @Test
+    void testGetNotificationViolationNotFoundException() {
         UserNotification notification = createUserNotificationForViolationWithParameters();
         notification.getUser().setUuid("abc");
         when(userNotificationRepository.findById(1L)).thenReturn(Optional.of(notification));
@@ -1172,11 +1355,11 @@ class NotificationServiceImplTest {
             .thenReturn(Optional.empty());
 
         assertThrows(NotFoundException.class,
-            () -> notificationService.getNotification("abc", 1L, "ua"));
+            () -> notificationService.getNotification("abc", 1L, "uk"));
     }
 
     @Test
-    void viewNotificationTest() {
+    void testViewNotification() {
         Long notificationId = TEST_NOTIFICATION_TEMPLATE.getId();
         Long userId = TEST_USER.getId();
 
@@ -1191,7 +1374,7 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void readNonExistentNotificationAndGetNotFoundExceptionTest() {
+    void testReadNonExistentNotificationAndGetNotFoundException() {
         Long notificationId = TEST_NOTIFICATION_TEMPLATE.getId();
         Long userId = TEST_USER.getId();
 
@@ -1210,7 +1393,7 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void unreadNotificationTest() {
+    void testUnreadNotification() {
         Long notificationId = TEST_NOTIFICATION_TEMPLATE.getId();
         Long userId = TEST_USER.getId();
 
@@ -1225,7 +1408,7 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void unreadNonExistentNotificationAndGetNotFoundExceptionTest() {
+    void testUnreadNonExistentNotificationAndGetNotFoundException() {
         Long notificationId = TEST_NOTIFICATION_TEMPLATE.getId();
         Long userId = TEST_USER.getId();
 
@@ -1244,7 +1427,7 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void deleteNotificationTest() {
+    void testDeleteNotification() {
         Long notificationId = TEST_NOTIFICATION_TEMPLATE.getId();
         Long userId = TEST_USER.getId();
 
@@ -1259,7 +1442,7 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void deleteNonExistentNotificationAndGetNotFoundExceptionTest() {
+    void testDeleteNonExistentNotificationAndGetNotFoundException() {
         Long notificationId = TEST_NOTIFICATION_TEMPLATE.getId();
         Long userId = TEST_USER.getId();
 
@@ -1287,14 +1470,13 @@ class NotificationServiceImplTest {
         order.setPayment(TEST_PAYMENT_LIST);
         order.setPointsToUse(0);
         order.setCertificates(Collections.emptySet());
-        Set<NotificationParameter> parameters = new HashSet<>();
         UserNotification notification = new UserNotification();
         notification.setNotificationType(NotificationType.ORDER_STATUS_CHANGED);
         notification.setUser(user);
         notification.setOrder(order);
 
         when(userNotificationRepository.save(any())).thenReturn(notification);
-        when(notificationParameterRepository.saveAll(any())).thenReturn(new ArrayList<>(parameters));
+        when(notificationParameterRepository.saveAll(any())).thenReturn(new ArrayList<>(new HashSet<>()));
         when(orderBagService.findAllBagsByOrderId(any())).thenReturn(getBag4list());
         notificationService.notifyUnpaidOrder(order, PAYMENT_LINK);
 
@@ -1316,7 +1498,6 @@ class NotificationServiceImplTest {
         order.setPayment(TEST_PAYMENT_LIST);
         order.setPointsToUse(0);
         order.setCertificates(Collections.emptySet());
-        Set<NotificationParameter> parameters = new HashSet<>();
 
         UserNotification notification = new UserNotification();
         notification.setNotificationType(NotificationType.DONE_OR_CANCELED_UNPAID_ORDER);
@@ -1324,7 +1505,7 @@ class NotificationServiceImplTest {
         notification.setOrder(order);
 
         when(userNotificationRepository.save(any())).thenReturn(notification);
-        when(notificationParameterRepository.saveAll(any())).thenReturn(new ArrayList<>(parameters));
+        when(notificationParameterRepository.saveAll(any())).thenReturn(new ArrayList<>(new HashSet<>()));
         when(orderBagService.findAllBagsByOrderId(any())).thenReturn(getBag4list());
         notificationService.notifyUnpaidOrder(order, PAYMENT_LINK);
 
@@ -1347,7 +1528,6 @@ class NotificationServiceImplTest {
         order.setPayment(TEST_PAYMENT_LIST);
         order.setPointsToUse(0);
         order.setCertificates(Collections.emptySet());
-        Set<NotificationParameter> parameters = new HashSet<>();
 
         UserNotification notification = new UserNotification();
         notification.setNotificationType(NotificationType.DONE_OR_CANCELED_UNPAID_ORDER);
@@ -1355,7 +1535,7 @@ class NotificationServiceImplTest {
         notification.setOrder(order);
 
         when(userNotificationRepository.save(any())).thenReturn(notification);
-        when(notificationParameterRepository.saveAll(any())).thenReturn(new ArrayList<>(parameters));
+        when(notificationParameterRepository.saveAll(any())).thenReturn(new ArrayList<>(new HashSet<>()));
         when(orderBagService.findAllBagsByOrderId(any())).thenReturn(getBag4list());
 
         notificationService.notifyUnpaidOrder(order, PAYMENT_LINK);
@@ -1378,7 +1558,6 @@ class NotificationServiceImplTest {
         order.setPayment(TEST_PAYMENT_LIST);
         order.setPointsToUse(0);
         order.setCertificates(Collections.emptySet());
-        Set<NotificationParameter> parameters = new HashSet<>();
 
         UserNotification notification = new UserNotification();
         notification.setNotificationType(NotificationType.DONE_OR_CANCELED_UNPAID_ORDER);
@@ -1386,7 +1565,7 @@ class NotificationServiceImplTest {
         notification.setOrder(order);
 
         when(userNotificationRepository.save(any())).thenReturn(notification);
-        when(notificationParameterRepository.saveAll(any())).thenReturn(new ArrayList<>(parameters));
+        when(notificationParameterRepository.saveAll(any())).thenReturn(new ArrayList<>(new HashSet<>()));
         when(orderBagService.findAllBagsByOrderId(any())).thenReturn(getBag4list());
 
         notificationService.notifyHalfPaidPackage(order);
@@ -1405,7 +1584,6 @@ class NotificationServiceImplTest {
         order.setPayment(TEST_PAYMENT_LIST);
         order.setPointsToUse(0);
         order.setCertificates(Collections.emptySet());
-        Set<NotificationParameter> parameters = new HashSet<>();
 
         UserNotification notification = new UserNotification();
         notification.setNotificationType(NotificationType.ORDER_STATUS_CHANGED);
@@ -1413,7 +1591,7 @@ class NotificationServiceImplTest {
         notification.setOrder(order);
 
         when(userNotificationRepository.save(any())).thenReturn(notification);
-        when(notificationParameterRepository.saveAll(any())).thenReturn(new ArrayList<>(parameters));
+        when(notificationParameterRepository.saveAll(any())).thenReturn(new ArrayList<>(new HashSet<>()));
         when(orderBagService.findAllBagsByOrderId(any())).thenReturn(getBag4list());
 
         notificationService.notifyHalfPaidPackage(order);
@@ -1423,8 +1601,8 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void createNotificationDtoTitleUaLanguageTest() {
-        String language = "ua";
+    void testCreateNotificationDtoTitleUaLanguage() {
+        String language = "uk";
 
         when(templateRepository.findNotificationTemplateByNotificationTypeAndNotificationReceiverType(any(), any()))
             .thenReturn(Optional.of(TEST_NOTIFICATION_TEMPLATE));
@@ -1436,7 +1614,7 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void createNotificationDtoTitleEnLanguageTest() {
+    void testCreateNotificationDtoTitleEnLanguage() {
         String language = "en";
 
         when(templateRepository.findNotificationTemplateByNotificationTypeAndNotificationReceiverType(any(), any()))
@@ -1449,16 +1627,19 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void createNotificationDtoOfCustomTemplateTest() {
+    void testCreateNotificationDtoOfCustomTemplate() {
         String language = "en";
 
-        var testNotificationTemplate = TEST_NOTIFICATION_TEMPLATE;
+        var testNotificationTemplate = ModelUtils.createNotificationTemplate();
         testNotificationTemplate.setNotificationType(NotificationType.CUSTOM);
         testNotificationTemplate.setTrigger(NotificationTrigger.CUSTOM);
 
-        var testUserNotification = TEST_USER_NOTIFICATION;
-        testUserNotification.setNotificationType(NotificationType.CUSTOM);
-        testUserNotification.setTemplateId(testNotificationTemplate.getId());
+        var testUserNotification = UserNotification.builder()
+            .notificationType(NotificationType.CUSTOM)
+            .user(TEST_USER_NOTIFICATION.getUser())
+            .order(TEST_USER_NOTIFICATION.getOrder())
+            .templateId(testNotificationTemplate.getId())
+            .build();
 
         when(templateRepository.findNotificationTemplateByIdAndNotificationReceiverType(any(), any()))
             .thenReturn(Optional.of(testNotificationTemplate));
@@ -1471,7 +1652,7 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void notifySelfPickupOrderTest() {
+    void testNotifySelfPickupOrder() {
         User user = getUser();
         Long orderId = 2L;
         Order order = Order.builder()
@@ -1498,7 +1679,27 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void notifyCreateNewOrderTest() {
+    void testNotifyAllHalfPaidPackagesWhenHalfPaidPackageDoesNotNeedNotification() {
+        Order order = Order.builder()
+            .id(1L)
+            .orderPaymentStatus(OrderPaymentStatus.HALF_PAID)
+            .orderDate(LocalDateTime.now(fixedClock).minusMonths(2))
+            .build();
+
+        when(orderRepository.findAllByOrderPaymentStatus(OrderPaymentStatus.HALF_PAID))
+            .thenReturn(List.of(order));
+        when(userNotificationRepository.findFirstByOrderIdAndNotificationTypeInOrderByNotificationTimeDesc(
+            eq(order.getId()), any(NotificationType.class), any(NotificationType.class), any(NotificationType.class)))
+            .thenReturn(Optional.empty());
+
+        notificationService.notifyAllHalfPaidPackages();
+
+        verify(userNotificationRepository, never()).save(any());
+        verify(notificationParameterRepository, never()).saveAll(any());
+    }
+
+    @Test
+    void testNotifyCreateNewOrder() {
         User user = getUser();
         Order newOrder = ModelUtils.getOrder();
         newOrder.setSumTotalAmountWithoutDiscounts(100L);
@@ -1526,5 +1727,82 @@ class NotificationServiceImplTest {
 
         verify(userNotificationRepository).save(notification);
         verify(notificationParameterRepository).saveAll(parameters);
+    }
+
+    @Test
+    void testNotifyManagerWithNewGreenOfficeRequestFromTelegramBot() {
+        ScheduledEmailMessage notification = ScheduledEmailMessage
+            .builder()
+            .username(USERNAME)
+            .subject(MessageProvider.get(TelegramBotConstants.UK, "green.office.subject"))
+            .body(USER_EMAIL)
+            .language(AppConstant.LOCALE_UK_NAME)
+            .isUbs(true)
+            .build();
+        doNothing().when(userRemoteClient).sendGreenOfficeRequestNotification(notification);
+
+        notificationService.notifyManagerWithNewGreenOfficeRequestFromTelegramBot(USER_EMAIL, USERNAME,
+            TelegramBotConstants.UK);
+
+        verify(userRemoteClient, times(1)).sendGreenOfficeRequestNotification(notification);
+    }
+
+    @Test
+    void testNotifyCanceledOrder() {
+        User user = getUser();
+        Order order = Order.builder()
+            .id(1L)
+            .user(user)
+            .sumTotalAmountWithoutDiscounts(10000L)
+            .build();
+        UserNotification notification = new UserNotification();
+        notification.setNotificationType(NotificationType.CANCELED_ORDER);
+        notification.setUser(user);
+        notification.setOrder(order);
+
+        when(userNotificationRepository.save(any())).thenReturn(notification);
+        when(notificationParameterRepository.saveAll(any())).thenReturn(new ArrayList<>(new HashSet<>()));
+
+        notificationService.notifyCanceledOrder(order);
+
+        verify(userNotificationRepository).save(any());
+        verify(notificationParameterRepository).saveAll(any());
+    }
+
+    @Test
+    void testGetAllNotificationsForUserForCustomNotifications() {
+        User user = TEST_USER;
+        String language = "en";
+        UserNotification customNotification1 = UserNotification.builder()
+            .id(1L)
+            .user(user)
+            .notificationType(NotificationType.CUSTOM)
+            .templateId(1L)
+            .build();
+        UserNotification customNotification2 = UserNotification.builder()
+            .id(2L)
+            .user(user)
+            .notificationType(NotificationType.CUSTOM)
+            .templateId(1L)
+            .build();
+
+        Page<UserNotification> page = new PageImpl<>(List.of(customNotification1, customNotification2),
+            Mockito.mock(Pageable.class),
+            2L);
+
+        when(userRepository.findByUuid(user.getUuid())).thenReturn(user);
+
+        when(templateRepository.findNotificationTemplateByIdAndNotificationReceiverType(1L, SITE))
+            .thenReturn(Optional.of(TEST_NOTIFICATION_TEMPLATE_2));
+
+        when(userNotificationRepository.findAllByUserAndIsDeletedFalse(user, TEST_PAGEABLE)).thenReturn(page);
+
+        when(userNotificationRepository.findById(1L)).thenReturn(Optional.of(customNotification1));
+        when(userNotificationRepository.findById(2L)).thenReturn(Optional.of(customNotification2));
+
+        PageableAdvancedDto<NotificationFullDto> actual =
+            notificationService.getAllNotificationsForUser(user.getUuid(), language, TEST_PAGEABLE);
+
+        assertEquals(TEST_NOTIFICATION_FULL_DTO_PAGEABLE_2, actual);
     }
 }
